# diff-match-patch.rs

diff_match_patch/: Cargo.toml
diff_match_patch/src/: dmp.rs  lib.rs  time.rs
diff_match_patch/tests/: integration_test.rs  serde_support_test.rs
