[package]
name = "diff_match_patch"
version = "0.2.0"
authors = ["chandan <chandanmahi1998@gmail.com>"]
edition = "2018"
description = "Diff Match Patch is a high-performance library in Rust-lang that manipulates plain text."
homepage = "https://github.com/distill-io/diff-match-patch.rs"
repository = "https://github.com/distill-io/diff-match-patch.rs"
keywords = ["diff", "diff-match-patch"]
categories = ["Development tools", "Text processing"]
license = "MIT"

[features]
serde_support = ["serde","serde_json"]

[dependencies]
url = "1.7.2"
regex = "1.3.7"
serde = { version = "1.0", features = ["derive"] , optional = true }
serde_json = {version = "1.0",optional = true}
wasm-bindgen = "0.2.77"